--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -121,7 +121,6 @@ ul.food-list__favcard {
 	border-color: #61045f;
 }
 
-
 .pagination {
 	width: 100%;
 	display: flex;
@@ -190,7 +189,8 @@ ul.food-list__favcard {
 	text-align: center;
 }
 
-@media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+/* @media only screen and (min-device-width: 20em) and (max-device-width: 30em) { */
+@media (min-width: 320px) and (max-width: 480px) {
 	.food-list__cardwrapper {
 		grid-gap: 0.8rem;
 		gap: 0.8rem;
@@ -201,7 +201,7 @@ ul.food-list__favcard {
 	}
 
 	.alcohol-caption {
-		padding: .75em .6em;
+		padding: .75em;
 	}
 
 	.alcohol-caption::before {
@@ -214,12 +214,13 @@ ul.food-list__favcard {
 		line-height: 1.5rem;
 	}
 
-	 .pagination {
+	.pagination {
 		justify-content: center;
 		margin: 0.75em;
-	} 
+	}
 
-	.pagination-link, .pagination-link__active {
+	.pagination-link,
+	.pagination-link__active {
 		padding: 0 0.5em;
 		margin: 0 0.2rem;
 	}
@@ -229,16 +230,15 @@ ul.food-list__favcard {
 		justify-content: center;
 	}
 
-
-	.pagination-next, .pagination-previous {
+	.pagination-next,
+	.pagination-previous {
 		padding: 0 .5em;
 		margin-left: .6em;
 	}
-
 }
 
-
-@media only screen and (min-device-width: 48em) and (max-device-width: 64em) {
+/* @media only screen and (min-device-width: 48em) and (max-device-width: 64em) { */
+@media (min-width: 481px) and (max-width: 768px) {
 	ul.food-list__card {
 		width: 29%;
 	}
