--- a/src/styles/favourite.css
+++ b/src/styles/favourite.css
@@ -149,7 +149,8 @@
 	border-color: #61045f;
 }
 
-@media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+/* @media only screen and (min-device-width: 20em) and (max-device-width: 30em) { */
+@media (min-width: 320px) and (max-width: 480px) {
 	.fav-list__container {
 		padding: 0px 10px;
 		margin-top: 30px;
@@ -171,7 +172,8 @@
 	}
 }
 
-@media only screen and (min-device-width: 48em) and (max-device-width: 64em) {
+/* @media only screen and (min-device-width: 48em) and (max-device-width: 64em) { */
+@media (min-width: 481px) and (max-width: 768px) {
 	.fav-list__container {
 		padding: 0px 10px;
 		margin-top: 30px;
