--- a/src/styles/random.css
+++ b/src/styles/random.css
@@ -73,26 +73,27 @@ ul.random-list__card {
 	text-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23);
 }
 
-.btn-random, .btn-random1 {
-    width: 100%;
-    font-family: 'Poppins', sans-serif;
-    font-size: 17px;
-    margin-top: 5px;
-    line-height: 2rem;
-    cursor: pointer;
-    outline: none;
-    border: 2px solid #ff5550;
-    color: #ff5550;
-    border-radius: 5px;
-    text-decoration: none;
-    box-shadow: 0px 10px 14px -10px rgb(254, 102, 67);
-    /* text-shadow: 0 3px 50px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23); */
-    background-color: transparent;
-    transition: all .2s;
-    text-shadow: 0px 0px 0px #ff5550;
+.btn-random,
+.btn-random1 {
+	width: 100%;
+	font-family: 'Poppins', sans-serif;
+	font-size: 17px;
+	margin-top: 5px;
+	line-height: 2rem;
+	cursor: pointer;
+	outline: none;
+	border: 2px solid #ff5550;
+	color: #ff5550;
+	border-radius: 5px;
+	text-decoration: none;
+	box-shadow: 0px 10px 14px -10px rgb(254, 102, 67);
+	/* text-shadow: 0 3px 50px rgba(0, 0, 0, .16), 0 1px 2px rgba(0, 0, 0, .23); */
+	background-color: transparent;
+	transition: all .2s;
+	text-shadow: 0px 0px 0px #ff5550;
 }
 
-.btn-random1  {
+.btn-random1 {
 	border: 2px solid #980369;
 	color: #980369;
 	border-radius: 5px;
@@ -113,7 +114,8 @@ ul.random-list__card {
 	border-color: #61045f;
 }
 
-@media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+/* @media only screen and (min-device-width: 20em) and (max-device-width: 30em) { */
+@media (min-width: 320px) and (max-width: 480px) {
 	.random-list__poster {
 		width: 35%;
 		padding-top: 40px;
@@ -140,7 +142,8 @@ ul.random-list__card {
 		overflow: hidden;
 	}
 
-	.btn-random__pick, .btn-random__pick1 {
+	.btn-random__pick,
+	.btn-random__pick1 {
 		width: 100%;
 		left: 0;
 		top: 0;
@@ -158,7 +161,8 @@ ul.random-list__card {
 		color: #fff;
 	}
 
-	.btn-random, .btn-random1 {
+	.btn-random,
+	.btn-random1 {
 		width: 100%;
 		font-size: 15px;
 		margin-top: 5px;
@@ -174,8 +178,10 @@ ul.random-list__card {
 	}
 }
 
-@media only screen and (min-device-width: 48em) and (max-device-width: 64em) {
-	.btn-random__pick, .btn-random__pick1 {
+/* @media only screen and (min-device-width: 48em) and (max-device-width: 64em) { */
+@media (min-width: 481px) and (max-width: 768px) {
+	.btn-random__pick,
+	.btn-random__pick1 {
 		left: 81%;
 		top: -4.5%;
 	}
