--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,19 +1,14 @@
 .welcome-wrapper {
-	position: relative;
-	display: flex;
-	justify-content: center;
 	width: 100%;
-	height: calc(100vh - 100px);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	-webkit-animation: fade 1s;
 	animation: fade 1s;
 	transform: all .3s;
 }
 
 .welcome-content {
-	position: absolute;
-	top: 50%;
-	right: 50%;
-	transform: translate(50%, -50%);
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -23,26 +18,21 @@
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
 }
 
-.welcome-text {
-	position: relative;
-	width: 50%;
-	height: 100%;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-}
-
-.welcome-text__content {
-	position: absolute;
-	top: 50%;
-	right: 50%;
-	transform: translate(50%, -50%);
-	width: 85%;
+ul.welcome-text__content {
 	max-height: 100%;
 	font-size: 20px;
 	text-align: center;
 	padding: 50px;
 	border-radius: 5px;
 	text-shadow: 0 0px 3px #3b3e41;
+}
+
+.welcome-text {
+	/* position: relative; */
+	width: 50%;
+	height: 100%;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 .welcome-text__content li h1 {
@@ -56,6 +46,7 @@
 }
 
 .welcome-text__content li:nth-child(2) h1 {
+	color: #ff5550;
 	-webkit-animation: textSlide1 .5s;
 	animation: textSlide1 .5s;
 }
@@ -66,6 +57,7 @@
 }
 
 .welcome-text__content li:nth-child(4) h1 {
+	color: #ff5550;
 	-webkit-animation: textSlide1 .5s;
 	animation: textSlide1 .5s;
 }
@@ -101,7 +93,7 @@
 .welcome-image {
 	position: relative;
 	width: 50%;
-	height: 100%;
+	min-height: 666px;
 	-webkit-animation: fade 1s;
 	animation: fade 1s;
 }
@@ -124,28 +116,39 @@
 	display: none;
 }
 
-/* @media only screen and (min-device-width: 20em) and (max-device-width: 30em) { */
 @media (min-width: 320px) and (max-width: 480px) {
 	.welcome-content {
 		width: 100%;
 	}
 
-	.welcome-text__content {
+	ul.welcome-text__content {
+		width: 100%;
 		padding: 10px;
 		font-size: 15px;
-		border-radius: 5px;
+		border-radius: 0px;
 		background-image: none;
 		background-color: hsla(0, 0%, 100%, .21);
-		box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+		/* box-shadow: 0 10px 20px rgba(0, 0, 0, .2); */
 	}
 
-	.welcome-text__content h1 {
-		margin: .5em;
+	.welcome-text__content li h1 {
+		margin: 0.3em;
+		font-size: 38px;
+	}
+
+	.welcome-text__content li:nth-child(2) h1 {
+		color: #ff0000;
+		text-shadow: 0 1px 2px #663939;
+	}
+
+	.welcome-text__content li:nth-child(4) h1 {
+		color: #ff0000;
+		text-shadow: 0 1px 2px #663939;
 	}
 
 	.welcome-text {
-		position: initial;
-		width: 0%;
+		position: absolute;
+		width: 100%;
 		z-index: 99;
 		padding: initial;
 	}
@@ -155,9 +158,10 @@
 		font-weight: 600;
 		color: #000;
 		border-color: #000;
-		margin-top: 15px;
+		/* margin-top: 15px; */
+		margin: 15px 0px;
 		text-shadow: none;
-		box-shadow: -4px 8px 15px -26px #fff;
+		/* box-shadow: -4px 8px 15px -26px #fff; */
 	}
 
 	.welcome-image {
@@ -169,10 +173,9 @@
 	}
 }
 
-/* @media only screen and (min-device-width: 48em) and (max-device-width: 64em) { */
 @media (min-width: 481px) and (max-width: 768px) {
-	.welcome-content {
-		width: 95%;
+	.welcome-wrapper {
+		padding: 20px;
 	}
 
 	.welcome-text__content {
@@ -183,5 +186,9 @@
 	.btn-welcome {
 		width: 100%;
 		box-shadow: -4px 8px 15px -26px #fff;
+	}
+
+	.welcome-image {
+		min-height: 786px;
 	}
 }
