--- a/src/styles/favourite.css
+++ b/src/styles/favourite.css
@@ -42,6 +42,7 @@ ul.fav-caption {
 	transition: all .3s;
 }
 
+.btn-stored__favactive,
 .btn-store__favactive {
 	position: absolute;
 	top: 5px;
@@ -57,6 +58,16 @@ ul.fav-caption {
 	box-shadow: 1px 7px 14px -11px #001;
 	padding-top: 5px;
 	z-index: 999;
+	transition: all .4s;
+}
+
+.btn-stored__favactive:hover{
+	background-color: lavender;
+	box-shadow: none;
+}
+
+.exit-favactive {
+	display: none;
 	transition: all .4s;
 }
 
@@ -121,10 +132,11 @@ ul.fav-caption {
 	position: absolute;
 	top: 0;
 	left: 0;
+	padding: initial;
 	width: 100%;
 	height: 100%;
 	opacity: 1;
-	transform-origin: bottom;
+	overflow: hidden;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 	border-bottom-right-radius: 25px;
@@ -133,7 +145,7 @@ ul.fav-caption {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
 	background-color: hsla(0, 0%, 100%, .21);
 	z-index: 9999;
-	transition: all .3s;
+	transition: all .4s;
 }
 
 .confirm-annex {
@@ -141,61 +153,59 @@ ul.fav-caption {
 	top: 0;
 	left: 0;
 	padding: 0;
+	width: 0;
+	height: 0;
 	opacity: 0;
-	width: 100%;
-	height: 100%;
+	overflow: hidden;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 	border-bottom-right-radius: 25px;
 	border-bottom-left-radius: 25px;
 	z-index: -1;
-	transition: all .3s;
+	transition: all .4s;
 }
 
 .popup {
 	width: 100%;
-	margin: 50px auto;
-	background: #fff;
+	height: 60%;
+	/* margin-top: 127px; */
+	margin-top: 57%;
+	background: lavender;
 	display: flex;
 	flex-direction: column;
-	padding-bottom: 5px;
+	background: lavender;
+	border-bottom-right-radius: 25px;
+	border-bottom-left-radius: 25px;
 }
 
 ul.alert-box {
-	display: flex;
-	justify-content: space-between;
 	padding: 5px;
 	border-radius: 4px;
-	color: #fff;
 }
 
-.btn-info,
 .btn-close {
+	float: right;
 	font-family: 'Poppins', sans-serif;
 	outline: none;
 	width: 35px;
 	height: 35px;
-    font-size: 25px;
-	border-radius: 50%;
 	color: red;
-	background-color: #fff;
+	font-size: 25px;
+	cursor: pointer;
+	border-radius: 50%;
 	border: 1px solid transparent;
+}
+
+.btn-close:hover {
+	background-color: #fff;
 	box-shadow: 1px 7px 14px -11px #001;
 }
 
-
-.btn-close {
-	cursor: pointer;
-}
-
-.btn-close:hover{
-	box-shadow: none;
-}
-
 ul.popup-content {
-	padding: 0px 5px;
-	border-top: 1px solid red;
-	border-bottom: 1px solid red;
+	padding: 5px;
+	margin-top: 6px;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .09);
+	background-color: hsla(0, 0%, 100%, .21);
 }
 
 ul.popup-content li:first-child p {
@@ -214,24 +224,19 @@ ul.popup-content li p {
 }
 
 .btn-yes {
-	position: relative;
-    top: 0%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-	font-family: 'Poppins', sans-serif;
-	outline: none;
+	width: 95%;
+	font-size: 17px;
+	margin: 13px 4px;
+	line-height: 1.5rem;
 	cursor: pointer;
-	width: 40px;
-    height: 40px;
-	font-size: 18px;
-	font-weight: 500;
-	border-radius: 50%;
-	color: red;
-	background-color: #fff;
-	border: 1px solid transparent;
-	box-shadow: 1px 7px 14px -11px #001;
-	border: 1px double red;
-    margin-top: 6px;
+	outline: none;
+	border: 2px solid salmon;
+	color: salmon;
+	border-radius: 25px;
+	text-decoration: none;
+	text-shadow: 0 3px 6px rgba(0, 0, 0, .10);
+	box-shadow: 0px 7px 14px -11px rgb(254, 102, 125);
+	transition: all .2s;
 }
 
 .fav-list__poster img {
@@ -284,7 +289,8 @@ ul.popup-content li p {
 	transition: all .2s;
 }
 
-.fav-btn__discover:hover {
+.fav-btn__discover:hover,
+.btn-yes:hover {
 	box-shadow: 0px 0px 5px #fff;
 	color: #61045f;
 	border-color: #61045f;
@@ -298,7 +304,7 @@ ul.popup-content li p {
 	}
 
 	ul.fav-caption li h2 {
-		font-size: 20px;
+		font-size: 18px;
 	}
 
 	.fav-caption__text {
@@ -321,12 +327,8 @@ ul.popup-content li p {
 	}
 
 	.popup {
-		margin: 45px auto;
-		padding-bottom: 0px;
-	}
-
-	.btn-yes {
-		margin-bottom: 6px;
+		height: 70%;
+		margin-top: 75px;
 	}
 }
 
