--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -123,6 +123,7 @@ ul.welcome-text__content {
 
 	ul.welcome-text__content {
 		width: 100%;
+		height: 100%;
 		padding: 10px;
 		font-size: 15px;
 		border-radius: 0px;
@@ -132,8 +133,10 @@ ul.welcome-text__content {
 	}
 
 	.welcome-text__content li h1 {
-		margin: 0.3em;
-		font-size: 38px;
+		/* margin: 0.3em;
+		font-size: 38px; */
+		margin: 0.16em;
+		font-size: 40px;
 	}
 
 	.welcome-text__content li:nth-child(2) h1 {
@@ -155,8 +158,10 @@ ul.welcome-text__content {
 
 	.btn-welcome {
 		width: 100%;
+		font-size: 20px;
 		font-weight: 600;
-		color: #000;
+		line-height: 2.3rem;
+		color: #000; 
 		border-color: #000;
 		/* margin-top: 15px; */
 		margin: 15px 0px;
